Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Private/Generate/Export/APawn.h

	DOTNET_EXPORT auto E_APawn_PostRegisterAllComponents(APawn* Self)
	{
		Self->PostRegisterAllComponents();
	}
	DOTNET_EXPORT auto E_APawn_PreInitializeComponents(APawn* Self)
	{
		Self->PreInitializeComponents();
	}
	DOTNET_EXPORT auto E_APawn_ReachedDesiredRotation(APawn* Self)
	{
		return Self->ReachedDesiredRotation();
	}
	DOTNET_EXPORT auto E_APawn_RecalculateBaseEyeHeight(APawn* Self)
	{
		Self->RecalculateBaseEyeHeight();
	}
	DOTNET_EXPORT auto E_APawn_Reset(APawn* Self)
	{
		Self->Reset();
	}
	DOTNET_EXPORT auto E_APawn_Restart(APawn* Self)
	{
		Self->Restart();
	}
	DOTNET_EXPORT auto E_APawn_SetCanAffectNavigationGeneration(APawn* Self, bool bNewValue, bool bForceUpdate)
	{
		auto _p0 = bNewValue;
		auto _p1 = bForceUpdate;
		Self->SetCanAffectNavigationGeneration(_p0, _p1);
	}
	DOTNET_EXPORT auto E_APawn_SetPlayerDefaults(APawn* Self)
	{
		Self->SetPlayerDefaults();
	}
	DOTNET_EXPORT auto E_APawn_SetRemoteViewPitch(APawn* Self, float NewRemoteViewPitch)
	{
		auto _p0 = NewRemoteViewPitch;
		Self->SetRemoteViewPitch(_p0);
	}
	DOTNET_EXPORT auto E_APawn_ShouldTickIfViewportsOnly(APawn* Self)
	{
		return Self->ShouldTickIfViewportsOnly();
	}
	DOTNET_EXPORT auto E_APawn_SpawnDefaultController(APawn* Self)
	{
		Self->SpawnDefaultController();
	}
	DOTNET_EXPORT auto E_APawn_TeleportSucceeded(APawn* Self, bool bIsATest)
	{
		auto _p0 = bIsATest;
		Self->TeleportSucceeded(_p0);
	}
	DOTNET_EXPORT auto E_APawn_TurnOff(APawn* Self)
	{
		Self->TurnOff();
	}
	DOTNET_EXPORT auto E_APawn_UnPossessed(APawn* Self)
	{
		Self->UnPossessed();
	}
	DOTNET_EXPORT auto E_APawn_UpdateNavAgent(APawn* Self)
	{
		Self->UpdateNavAgent();
	}
	DOTNET_EXPORT auto E_APawn_UpdateNavigationRelevance(APawn* Self)
	{
		Self->UpdateNavigationRelevance();
	}
	DOTNET_EXPORT auto E_APawn_AddTickPrerequisiteActor(APawn* Self, AActor* PrerequisiteActor)
	{
		auto _p0 = PrerequisiteActor;
		Self->AddTickPrerequisiteActor(_p0);
	}
	DOTNET_EXPORT auto E_APawn_AddTickPrerequisiteComponent(APawn* Self, UActorComponent* PrerequisiteComponent)
	{
		auto _p0 = PrerequisiteComponent;
		Self->AddTickPrerequisiteComponent(_p0);
	}
	DOTNET_EXPORT auto E_APawn_ApplyWorldOffset(APawn* Self, INT_PTR InOffset, bool bWorldShift)
	{
		auto _p0 = *(FVector*)InOffset;
		auto _p1 = bWorldShift;
		Self->ApplyWorldOffset(_p0, _p1);
	}
	DOTNET_EXPORT auto E_APawn_BeginDestroy(APawn* Self)
	{
		Self->BeginDestroy();
	}
	DOTNET_EXPORT auto E_APawn_BeginPlay(APawn* Self)
	{
		Self->BeginPlay();
	}
	DOTNET_EXPORT auto E_APawn_CalculateComponentsBoundingBoxInLocalSpace(APawn* Self, bool bNonColliding)
	{
		auto _p0 = bNonColliding;
		return (INT_PTR) new FBox(Self->CalculateComponentsBoundingBoxInLocalSpace(_p0));
	}
	DOTNET_EXPORT auto E_APawn_CanBeInCluster(APawn* Self)
	{
		return Self->CanBeInCluster();
	}
	DOTNET_EXPORT auto E_APawn_CheckDefaultSubobjectsInternal(APawn* Self)
	{
		return Self->CheckDefaultSubobjectsInternal();
	}
	DOTNET_EXPORT auto E_APawn_CheckStillInWorld(APawn* Self)
	{
		return Self->CheckStillInWorld();
	}
	DOTNET_EXPORT auto E_APawn_ClearCrossLevelReferences(APawn* Self)
	{
		Self->ClearCrossLevelReferences();
	}
	DOTNET_EXPORT auto E_APawn_DestroyNetworkActorHandled(APawn* Self)
	{
		return Self->DestroyNetworkActorHandled();
	}
	DOTNET_EXPORT auto E_APawn_ForceNetRelevant(APawn* Self)
	{
		Self->ForceNetRelevant();
	}
	DOTNET_EXPORT auto E_APawn_ForceNetUpdate(APawn* Self)
	{
		Self->ForceNetUpdate();
	}
	DOTNET_EXPORT auto E_APawn_GatherCurrentMovement(APawn* Self)
	{
		Self->GatherCurrentMovement();
	}
	DOTNET_EXPORT auto E_APawn_GetComponentsBoundingBox(APawn* Self, bool bNonColliding)
	{
		auto _p0 = bNonColliding;
		return (INT_PTR) new FBox(Self->GetComponentsBoundingBox(_p0));
	}
	DOTNET_EXPORT auto E_APawn_GetComponentsBoundingCylinder(APawn* Self, float CollisionRadius, float CollisionHalfHeight, bool bNonColliding)
	{
		auto _p0 = CollisionRadius;
		auto _p1 = CollisionHalfHeight;
		auto _p2 = bNonColliding;
		Self->GetComponentsBoundingCylinder(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_APawn_GetComponentsCollisionResponseToChannel(APawn* Self, ECollisionChannel Channel)
	{
		auto _p0 = Channel;
		return Self->GetComponentsCollisionResponseToChannel(_p0);
	}
	DOTNET_EXPORT auto E_APawn_GetDefaultAttachComponent(APawn* Self)
	{
		return ConvertToManage_ObjectPointerDescription(Self->GetDefaultAttachComponent());
	}
	DOTNET_EXPORT auto E_APawn_GetLastRenderTime(APawn* Self)
	{
		return Self->GetLastRenderTime();
	}
	DOTNET_EXPORT auto E_APawn_GetLifeSpan(APawn* Self)
	{
		return Self->GetLifeSpan();
	}
	DOTNET_EXPORT auto E_APawn_GetSimpleCollisionCylinder(APawn* Self, float CollisionRadius, float CollisionHalfHeight)
	{
		auto _p0 = CollisionRadius;
		auto _p1 = CollisionHalfHeight;
		Self->GetSimpleCollisionCylinder(_p0, _p1);
	}
	DOTNET_EXPORT auto E_APawn_GetTargetLocation(APawn* Self, AActor* RequestedBy)
	{
		auto _p0 = RequestedBy;
		return (INT_PTR) new FVector(Self->GetTargetLocation(_p0));
	}
	DOTNET_EXPORT auto E_APawn_GetWorld(APawn* Self)
	{
		return ConvertToManage_ObjectPointerDescription(Self->GetWorld());
	}
	DOTNET_EXPORT auto E_APawn_HasActiveCameraComponent(APawn* Self)
	{
		return Self->HasActiveCameraComponent();
	}
	DOTNET_EXPORT auto E_APawn_HasActivePawnControlCameraComponent(APawn* Self)
	{
		return Self->HasActivePawnControlCameraComponent();
	}
	DOTNET_EXPORT auto E_APawn_HasNetOwner(APawn* Self)
	{
		return ((E_PROTECTED_WRAP_APawn*)Self)->HasNetOwner_WRAP();
	}
	DOTNET_EXPORT auto E_APawn_InvalidateLightingCacheDetailed(APawn* Self, bool bTranslationOnly)
	{
		auto _p0 = bTranslationOnly;
		Self->InvalidateLightingCacheDetailed(_p0);
	}
	DOTNET_EXPORT auto E_APawn_IsAttachedTo(APawn* Self, AActor* Other)
	{
		auto _p0 = Other;
		return Self->IsAttachedTo(_p0);
	}
	DOTNET_EXPORT auto E_APawn_IsComponentRelevantForNavigation(APawn* Self, UActorComponent* Component)
	{
		auto _p0 = Component;
		return Self->IsComponentRelevantForNavigation(_p0);
	}
	DOTNET_EXPORT auto E_APawn_IsLevelBoundsRelevant(APawn* Self)
	{
		return Self->IsLevelBoundsRelevant();
	}
	DOTNET_EXPORT auto E_APawn_IsNameStableForNetworking(APawn* Self)
	{
		return Self->IsNameStableForNetworking();
	}
	DOTNET_EXPORT auto E_APawn_IsReadyForFinishDestroy(APawn* Self)
	{
		return Self->IsReadyForFinishDestroy();
	}
	DOTNET_EXPORT auto E_APawn_IsRelevancyOwnerFor(APawn* Self, AActor* ReplicatedActor, AActor* ActorOwner, AActor* ConnectionActor)
	{
		auto _p0 = ReplicatedActor;
		auto _p1 = ActorOwner;
		auto _p2 = ConnectionActor;
		return Self->IsRelevancyOwnerFor(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_APawn_IsReplayRelevantFor(APawn* Self, AActor* RealViewer, AActor* ViewTarget, INT_PTR SrcLocation, float CullDistanceSquared)
	{
		auto _p0 = RealViewer;
		auto _p1 = ViewTarget;
		auto _p2 = *(FVector*)SrcLocation;
		auto _p3 = CullDistanceSquared;
		return Self->IsReplayRelevantFor(_p0, _p1, _p2, _p3);
	}
	DOTNET_EXPORT auto E_APawn_IsRootComponentCollisionRegistered(APawn* Self)
	{
		return Self->IsRootComponentCollisionRegistered();
	}
	DOTNET_EXPORT auto E_APawn_IsSupportedForNetworking(APawn* Self)
	{
		return Self->IsSupportedForNetworking();
	}
	DOTNET_EXPORT auto E_APawn_K2_DestroyActor(APawn* Self)
	{
		Self->K2_DestroyActor();
	}
	DOTNET_EXPORT auto E_APawn_LifeSpanExpired(APawn* Self)
	{
		Self->LifeSpanExpired();
	}
	DOTNET_EXPORT auto E_APawn_MarkComponentsAsPendingKill(APawn* Self)
	{
		Self->MarkComponentsAsPendingKill();
	}
	DOTNET_EXPORT auto E_APawn_Modify(APawn* Self, bool bAlwaysMarkDirty)
	{
		auto _p0 = bAlwaysMarkDirty;
		return Self->Modify(_p0);
	}
	DOTNET_EXPORT auto E_APawn_NotifyActorBeginCursorOver(APawn* Self)
	{
		Self->NotifyActorBeginCursorOver();
	}
	DOTNET_EXPORT auto E_APawn_NotifyActorBeginOverlap(APawn* Self, AActor* OtherActor)
	{
		auto _p0 = OtherActor;
		Self->NotifyActorBeginOverlap(_p0);
	}
	DOTNET_EXPORT auto E_APawn_NotifyActorEndCursorOver(APawn* Self)
	{
		Self->NotifyActorEndCursorOver();
	}
	DOTNET_EXPORT auto E_APawn_NotifyActorEndOverlap(APawn* Self, AActor* OtherActor)
	{
		auto _p0 = OtherActor;
		Self->NotifyActorEndOverlap(_p0);
	}
	DOTNET_EXPORT auto E_APawn_NotifyHit(APawn* Self, UPrimitiveComponent* MyComp, AActor* Other, UPrimitiveComponent* OtherComp, bool bSelfMoved, INT_PTR HitLocation, INT_PTR HitNormal, INT_PTR NormalImpulse, INT_PTR Hit)
	{
		auto _p0 = MyComp;
		auto _p1 = Other;
		auto _p2 = OtherComp;
		auto _p3 = bSelfMoved;
		auto _p4 = *(FVector*)HitLocation;
		auto _p5 = *(FVector*)HitNormal;
		auto _p6 = *(FVector*)NormalImpulse;
		auto _p7 = *(FHitResult*)Hit;
		Self->NotifyHit(_p0, _p1, _p2, _p3, _p4, _p5, _p6, _p7);
	}
	DOTNET_EXPORT auto E_APawn_OnConstruction(APawn* Self, INT_PTR Transform)
	{
		auto _p0 = *(FTransform*)Transform;
		Self->OnConstruction(_p0);
	}
	DOTNET_EXPORT auto E_APawn_OnRep_AttachmentReplication(APawn* Self)
	{
		Self->OnRep_AttachmentReplication();
	}
	DOTNET_EXPORT auto E_APawn_OnRep_Instigator(APawn* Self)
	{
		Self->OnRep_Instigator();
	}
	DOTNET_EXPORT auto E_APawn_OnRep_Owner(APawn* Self)
	{
		((E_PROTECTED_WRAP_APawn*)Self)->OnRep_Owner_WRAP();
	}
	DOTNET_EXPORT auto E_APawn_OnRep_ReplicatedMovement(APawn* Self)
	{
		Self->OnRep_ReplicatedMovement();
	}